--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DentalCare</title>
+    <!-- Icon -->
     <link rel="icon" href="../assets/img/teeth.png" type="image/png">
-    <link rel="stylesheet" href="./css/style.css">
-    <style>
-        .hero {
-            background-image: url('assets/img/home.png');
-        }
-    </style>
+    <!-- CSS Stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -19,18 +16,17 @@
     <!-- NAVBAR -->
     <nav class="navbar" id="navbar">
         <div class="navbar-logo">
-            <H4>Dental Care</H4>
+            <H4>Ventinove</H4>
         </div>
 
         <div class="nav-list">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="about-us.html">About Us</a></li>
                 <li><a href="dentist.html">Dentist</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><button><a href="booking.html">Booking</a></button></li>
-                <!-- <li><button id="openPopup">Booking</button></li> -->
             </ul>
         </div>
 
@@ -42,33 +38,26 @@
     </nav>
     <!-- END NAVBAR -->
 
-
     <!-- HERO SECTION -->
     <section class="hero">
         <h1>Welcome to</h1>
-        <h2>Ventinove Dental Center</h2>
-        <p>Perfect places to protect your smile and keep it healthy, with the largest network of dentist nationwide, quick answers 
-        and personalized services</p> 
-        <a href="./services.html" class="btn-appointment">See More About Services</a> 
+        <h2>Ventinove Dental Care</h2>
+        <p>
+            Perfect places to protect your smile and keep it healthy, with the largest network of dentist nationwide, quick answers and personalized services.
+        </p>
+        <a href="#about-us" class="btn-hero">See More About Us</a>
     </section>
     <!-- END HERO SECTION -->
 
     <!-- SECTION 1 ABOUT US -->
-    <section class="section1">
-        <!-- Gambar -->
-        <img src="assets/img/aboutus-1.png" alt="Deskripsi Gambar">
-
-        <!-- Teks -->
+    <section class="section1" id="about-us">
+        <img src="assets/img/aboutUs-home.png" alt="About Us">
         <div class="section1-text">
             <h1>About Us</h1>
             <p>
-                Corem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, 
-                mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum 
-                tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. 
+                Ventinove Dental Care is a dentist clinic website belonging to Group 29 Section Balikpapan. This website is designed to help patients with all dental problems to make an appointment for dental treatment with our best specialist doctors. Want to know more about us? check it out!
             </p>
-
-            <!-- Tombol "See More" -->
-            <a href="#" class="btn-see-more">See More</a>
+            <a href="about-us.html" class="btn-see-more">See More</a>
         </div>
     </section>
     <!-- END SECTION 1 ABOUT US -->
@@ -77,37 +66,35 @@
     <section class="section2">
         <h2 class="section2-title">Our Services</h2>
         <p class="section2-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. 
-            Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. 
-            Maecenas eget condimentum velit, sit amet feugiat lectus. 
+            Ventinove has already served more than <b>1000 patients since 2023</b>. Still not sure? Try our dental care at our clinic and achieve the best dental health and your brightest smile with our various services!
         </p>
         <div class="section2-container">
             <!-- Service Card 1 -->
             <div class="section2-card">
-                <img src="assets/img/service1.png" alt="Service 1">
+                <img src="assets/img/service-1.png" alt="Service 1">
                 <h3>Tooth Filling</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Procedures to treat tooth decay such as cavities.
                 </p>
-                <a href="#" class="btn-read-more">Read More</a>
+                <a href="services.html" class="btn-read-more">Read More</a>
             </div>
             <!-- Service Card 2 -->
             <div class="section2-card">
-                <img src="assets/img/service8.png" alt="Service 8">
+                <img src="assets/img/service-8.png" alt="Service 8">
                 <h3>Braces Installation</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Braces installation procedure with a professional dentist.
                 </p>
-                <a href="#" class="btn-read-more">Read More</a>
+                <a href="services.html" class="btn-read-more">Read More</a>
             </div>
             <!-- Service Card 3 -->
             <div class="section2-card">
-                <img src="assets/img/service4.png" alt="Service 4">
+                <img src="assets/img/service-4.png" alt="Service 4">
                 <h3>Dental Health Consultation</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Dental problem consultation services with our dentists.     
                 </p>
-                <a href="#" class="btn-read-more">Read More</a>
+                <a href="services.html" class="btn-read-more">Read More</a>
             </div>
         </div>
     </section>
@@ -117,14 +104,13 @@
     <section class="section3">
         <h2 class="section3-title">Our Dentist</h2>
         <p class="section3-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. 
-            Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. 
-            Maecenas eget condimentum velit, sit amet feugiat lectus. 
+            <b>Our 5+ dentists are ready to treat your dental problems!</b> Starting from general dentists, to other dental specialists. 
+            No need to worry, all of our dentists are experts in their fields
         </p>
         <div class="section3-container">
             <!-- Dentist Card 1 -->
             <div class="section3-card">
-                <img src="assets/img/dentist1.png" alt="Dentist 1">
+                <img src="assets/img/dentist-1.png" alt="Dentist 1">
                 <h3>Jocelyn Dokidis D.D.S.</h3>
                 <p>
                     Orthodontist
@@ -132,7 +118,7 @@
             </div>
             <!-- Dentist Card 2 -->
             <div class="section3-card">
-                <img src="assets/img/dentist5.png" alt="Dentist 2">
+                <img src="assets/img/dentist-5.png" alt="Dentist 2">
                 <h3>Phillip Aminoff D.D.S.</h3>
                 <p>
                     Periodontist
@@ -140,7 +126,7 @@
             </div>
             <!-- Dentist Card 3 -->
             <div class="section3-card">
-                <img src="assets/img/dentist2.png" alt="Dentist 3">
+                <img src="assets/img/dentist-2.png" alt="Dentist 3">
                 <h3>Tatiana Dias D.D.S.</h3>
                 <p>
                     General Dentist
@@ -150,19 +136,50 @@
     </section>
     <!-- END SECTION 3 DENTIST -->
 
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer_content">
+            <div class="footer__addr">
+                <h1 class="footer__logo">Ventinove Dental Care</h1>
+                <ul>
+                    <li>Address : Mitlton Str. 26-27 London UK</li>
+                    <li>Phone : +62 812345678999</li>
+                    <li>Email : exampleemail@gmail.com</li>
+                </ul>
+            </div>
+            
+            <div class="footer__nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
+                    <li><a href="dentist.html">Dentist</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
 
-    <!-- START FOOTER SECTION -->
-
-    <!-- Tolong tambahin footer juga yaa -->
-
-    <!-- END FOOTER SECTION -->
-
+            <div class="nav__services">
+                <p class="srvc__title">Services</p>
+                <ul>
+                    <li>Tooth Filling</li>
+                    <li>Tooth Whitening</li>
+                    <li>Denture Fitting</li>
+                    <li>Dental Health Consultation</li>
+                    <li>Tooth Extraction</li>
+                    <li>Professional Scaling</li>
+                    <li>Dental Checkup</li>
+                    <li>Braces Installation</li>
+                </ul>
+            </div>
+        </div> 
+ 
+        <div class="copyright">
+            <p>Copyright &copy; 2023 All rights reserved | This template was made by GROUP 29</p>
+        </div>
+    </footer>
+    <!-- END FOOTER -->
 
     <!-- JAVASCRIPT -->
-    <script src="./js/index.js">
-    </script>
-
-    <!-- END JAVASCRIPT -->
+    <script src="js/index.js"></script>
 
 </body>
 </html>
