--- a/dentist.html
+++ b/dentist.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dentist</title>
+    <!-- Icon -->
     <link rel="icon" href="../assets/img/teeth.png" type="image/png">
+    <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        /* * {
-            background-color: #ADD0F9;
-        } */
 
-        .hero-dentist {
-        background-image: url('assets/img/dentist.png'); /* Gambar latar belakang hero */
-        }
-    </style>
 </head>
 <body>
+
     <!-- NAVBAR -->
-    <nav class="navbar">
+    <nav class="navbar" id="navbar">
         <div class="navbar-logo">
-            <!-- <a href="#">Logo</a> -->
-            <H4>Dental Care</H4>
-            <!-- <img src="healthcare_logo.png" alt="Healthcare Logo"> -->
+            <H4>Ventinove</H4>
         </div>
 
         <div class="nav-list">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="about-us.html">About Us</a></li>
                 <li><a href="dentist.html">Dentist</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -44,21 +38,21 @@
     </nav>
     <!-- END NAVBAR -->
 
-    <!-- Hero Section -->
+    <!-- HERO SECTION -->
     <div class="hero-dentist">
         <div class="herodentist-text">
-            <h1>WE CARE ABOUT YOU</h1>
+            <h1>OUR DENTIST</h1>
         </div>
     </div>
-    <!-- End Hero Section -->
+    <!-- HERO SECTION -->
 
-    <!-- Content Section -->
+    <!-- START CONTENT SECTION -->
     <section class="dentist">
         <h1 class="dentist-tittle">OUR DENTIST</h1>
         <div class="dentist-container">
             <!-- card 1 -->
             <div class="dentist-card">
-                <img src="assets/img/dentist2.png" alt="Dentist 1">
+                <img src="assets/img/dentist-2.png" alt="Dentist 1">
                 <h3>Tatiana Dias D.D.S.</h3>
                 <p>
                     General Dentist
@@ -66,7 +60,7 @@
             </div>
             <!-- card 2 -->
             <div class="dentist-card">
-                <img src="assets/img/dentist3.png" alt="Dentist 2">
+                <img src="assets/img/dentist-3.png" alt="Dentist 2">
                 <h3>Jaylon Calzoni D.D.S.</h3>
                 <p>
                     General Dentist
@@ -76,7 +70,7 @@
         <div class="dentist-container">
             <!-- card 1 -->
             <div class="dentist-card">
-                <img src="assets/img/dentist1.png" alt="Dentis 1">
+                <img src="assets/img/dentist-1.png" alt="Dentis 1">
                 <h3>Jocelyn Dokidis D.D.S.</h3>
                 <p>
                     Orthodontist
@@ -84,7 +78,7 @@
             </div>
             <!-- card 2 -->
             <div class="dentist-card">
-                <img src="assets/img/dentist4.png" alt="Dentist 2">
+                <img src="assets/img/dentist-4.png" alt="Dentist 2">
                 <h3>Emery Kenter D.D.S.</h3>
                 <p>
                     Cosmetic Dentist
@@ -94,7 +88,7 @@
         <div class="dentist-container">
             <!-- card 1 -->
             <div class="dentist-card">
-                <img src="assets/img/dentist5.png" alt="Dentis 1">
+                <img src="assets/img/dentist-5.png" alt="Dentis 1">
                 <h3>Phillip Aminoff D.D.S.</h3>
                 <p>
                     Periodontist
@@ -102,7 +96,7 @@
             </div>
             <!-- card 2 -->
             <div class="dentist-card">
-                <img src="assets/img/dentist6.png" alt="Dentist 2">
+                <img src="assets/img/dentist-6.png" alt="Dentist 2">
                 <h3>Carter Dias D.D.S.</h3>
                 <p>
                     Implantologist
@@ -110,8 +104,52 @@
             </div>
         </div>
     </section>
-    <!-- End Content Section -->
+    <!-- END CONTENT SECTION -->
 
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer_content">
+            <div class="footer__addr">
+                <h1 class="footer__logo">Ventinove Dental Care</h1>
+                <ul>
+                    <li>Address : Mitlton Str. 26-27 London UK</li>
+                    <li>Phone : +62 812345678999</li>
+                    <li>Email : exampleemail@gmail.com</li>
+                </ul>
+            </div>
+            
+            <div class="footer__nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
+                    <li><a href="dentist.html">Dentist</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="nav__services">
+                <p class="srvc__title">Services</p>
+                <ul>
+                    <li>Tooth Filling</li>
+                    <li>Tooth Whitening</li>
+                    <li>Denture Fitting</li>
+                    <li>Dental Health Consultation</li>
+                    <li>Tooth Extraction</li>
+                    <li>Professional Scaling</li>
+                    <li>Dental Checkup</li>
+                    <li>Braces Installation</li>
+                </ul>
+            </div>
+        </div> 
+ 
+        <div class="copyright">
+            <p>Copyright &copy; 2023 All rights reserved | This template was made by GROUP 29</p>
+        </div>
+    </footer>
+    <!-- END FOOTER -->
+
+    <!-- JAVASCRIPT -->
     <script src="js/index.js"></script>
+
 </body>
 </html>
