--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <!-- Icon -->
-    <link rel="icon" href="../assets/img/teeth.png" type="image/png">
+    <link rel="icon" href="../assets/icon/teeth.ico" type="image/x-icon">
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
