--- a/dentist.html
+++ b/dentist.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dentist</title>
     <!-- Icon -->
-    <link rel="icon" href="../assets/img/teeth.png" type="image/png">
+    <link rel="icon" href="../assets/icon/teeth.ico" type="image/x-icon">
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
 
 </head>
 <body>
@@ -47,62 +48,69 @@
     <!-- HERO SECTION -->
 
     <!-- START CONTENT SECTION -->
-    <section class="dentist">
-        <h1 class="dentist-tittle">OUR DENTIST</h1>
-        <div class="dentist-container">
-            <!-- card 1 -->
-            <div class="dentist-card">
-                <img src="assets/img/dentist-2.png" alt="Dentist 1">
-                <h3>Tatiana Dias D.D.S.</h3>
-                <p>
-                    General Dentist
-                </p>
+    <section class="dentist" oncontextmenu="return false">
+        <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="slide-card">
+                  <img src="assets/img/dentist-2.png" alt="Dentist 1">
+                  <h3>Tatiana Dias D.D.S.</h3>
+                      <p>
+                          General Dentist
+                      </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-card">
+                  <img src="assets/img/dentist-3.png" alt="Dentist 2">
+                  <h3>Jaylon Calzoni D.D.S.</h3>
+                      <p>
+                          General Dentist
+                      </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-card">
+                      <img src="assets/img/dentist-1.png" alt="Dentis 3"> 
+                      <h3>Jocelyn Dokidis D.D.S.</h3>
+                      <p>
+                          Orthodontist
+                      </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-card">
+                  <img src="assets/img/dentist-4.png" alt="Dentist 4">
+                  <h3>Emery Kenter D.D.S.</h3>
+                      <p>
+                          Cosmetic Dentist
+                      </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                  <div class="slide-card">
+                      <img src="assets/img/dentist-5.png" alt="Dentis 5">
+                      <h3>Phillip Aminoff D.D.S.</h3>
+                      <p>
+                          Periodontist
+                      </p>
+                  </div>
+              </div>
+              <div class="swiper-slide">
+                  <div class="slide-card">
+                      <img src="assets/img/dentist-6.png" alt="Dentis 6">
+                      <h3>Carter Dias D.D.S.</h3>
+                      <p>
+                          Implantologist
+                      </p>
+                  </div>
+              </div>
             </div>
-            <!-- card 2 -->
-            <div class="dentist-card">
-                <img src="assets/img/dentist-3.png" alt="Dentist 2">
-                <h3>Jaylon Calzoni D.D.S.</h3>
-                <p>
-                    General Dentist
-                </p>
-            </div>
-        </div>
-        <div class="dentist-container">
-            <!-- card 1 -->
-            <div class="dentist-card">
-                <img src="assets/img/dentist-1.png" alt="Dentis 1">
-                <h3>Jocelyn Dokidis D.D.S.</h3>
-                <p>
-                    Orthodontist
-                </p>
-            </div>
-            <!-- card 2 -->
-            <div class="dentist-card">
-                <img src="assets/img/dentist-4.png" alt="Dentist 2">
-                <h3>Emery Kenter D.D.S.</h3>
-                <p>
-                    Cosmetic Dentist
-                </p>
-            </div>
-        </div>
-        <div class="dentist-container">
-            <!-- card 1 -->
-            <div class="dentist-card">
-                <img src="assets/img/dentist-5.png" alt="Dentis 1">
-                <h3>Phillip Aminoff D.D.S.</h3>
-                <p>
-                    Periodontist
-                </p>
-            </div>
-            <!-- card 2 -->
-            <div class="dentist-card">
-                <img src="assets/img/dentist-6.png" alt="Dentist 2">
-                <h3>Carter Dias D.D.S.</h3>
-                <p>
-                    Implantologist
-                </p>
-            </div>
-        </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-pagination"></div>
+          </div>
     </section>
     <!-- END CONTENT SECTION -->
 
@@ -150,6 +158,8 @@
 
     <!-- JAVASCRIPT -->
     <script src="js/index.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="js/dentist.js"></script>
 
 </body>
 </html>
